--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,31 @@ body {
     font-family: 'Roboto';
 }
 
+.contenedor {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.borrar-contenedor {
+    display: flex;
+    justify-content: center;
+}
+
+#borrar-todo {
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+    background-color: red;
+    width: 10vw;
+}
+
 .lista {
     list-style: none;
     margin: 0;
@@ -16,12 +41,41 @@ body {
 }
 
 .lista li {
+    margin-bottom: 10px;
     padding: 0;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
     border: 1px solid red;
     border-radius: 20px;
+    width: 500px;
+}
+
+.lista p{
+    flex-grow: 1;
 }
 
 .tarea-incompleta {
     text-decoration: line-through;
+}
+
+.boton-completar {
+    display: flex;
+    align-items: center;
+    border: 0;
+    background-color: #17a2b8;
+    border-radius: 100%;
+    cursor: pointer;
+    margin-left: 20px;
+    margin-right: 20px;
+    height: 20px;
+}
+
+.btn-eliminar {
+    background-color: #dc3545;
+    color: white;
+    border: 0;
+    border-radius: 20px;
+    margin-right: 20px;
+    cursor: pointer;
 }
