--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ input {
     border-radius: 20px;
     width: 500px;
     background-color: white;
+    box-shadow: 4px 4px 5px gray;
 }
 
 .lista p{
